--- a/TrafficLights/Light.css
+++ b/TrafficLights/Light.css
@@ -4,20 +4,20 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f0f0f0;
+    background-color: rgb(50, 51, 51);
     text-align: center;
 }
 
 .container {
-    display: flex;
+    display:flex;
     flex-direction: column;
     align-items: center;
 }
 
 img {
-    width: 150px;
-    height: 150px;
-    margin: 20px;
+    width: 500px;
+    height: 500px;
+    margin: 50px;
 }
 
 button {
