--- a/TrafficLights/Traffi.css
+++ b/TrafficLights/Traffi.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: rgb(4, 137, 108); 
+    background-color: rgb(50, 51, 51); 
 }
 
 .traffic-light {
@@ -36,4 +36,7 @@ body {
 
 .green {
     background-color: green;
+}
+.T {
+    color: rgb(255, 255, 255);
 }
